--- a/test_commit.html
+++ b/test_commit.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Proyecto grupo 21</title>
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <h1>
-    What!!!
+        Prueba de commmit en Github
     </h1>
     <div class = "estilo_caja_logo">
         <h2>Hello!</h2>
